==> mikalhart/IridiumSBD/src/IridiumSBD.cpp <==
#include <time.h>
#include "IridiumSBD.h"

bool IridiumSBD::cancelled()
{
   if (ringPin != -1 && digitalRead(ringPin) == LOW) // Active low per guide
      ringAsserted = true;

   if (ISBDCallback != NULL)
      return !ISBDCallback();

   return false;
}

void IridiumSBD::power(bool on)
{
   this->asleep = !on;

   if (this->sleepPin == -1)
      return;

   pinMode(this->sleepPin, OUTPUT);

   if (on)
   {
      diagprint(F("Powering on modem...\r\n"));
      digitalWrite(this->sleepPin, HIGH); // HIGH = awake
      lastPowerOnTime = millis();
   }

   else
   {
      // Best Practices Guide suggests waiting at least 2 seconds
      // before powering off again
      unsigned long elapsed = millis() - lastPowerOnTime;
      if (elapsed < 2000UL)
         delay(2000UL - elapsed);

      diagprint(F("Powering off modem...\r\n"));
      digitalWrite(this->sleepPin, LOW); // LOW = asleep
   }
}
