==> McGillRocketTeam/avionics-2022/Flight Computer/Sensors/Iridium9603N_testing/Drivers/MRT_Iridium_f4xx/Src/IridiumSBD.cpp <==
#include <time.h>
#include "IridiumSBD.h"
#include <stdio.h>
#include <stm32f4xx_hal.h>
#define millis() HAL_GetTick()

bool IridiumSBD::cancelled()
{
   if (this->useSerial)
   {
	   //For some reason when using digitalRead here it didn't work so simply replaced with HAL function
      if ((ringPin != -1) && HAL_GPIO_ReadPin(ringPin_GPIO_Port,ringPin_Pin) == LOW)
	  {
         ringAsserted = true;
		 diagprint(F("ringPin seen!\r\n"));
	  }
   }

   return !ISBDCallback();
}

void IridiumSBD::power(bool on)
{
   this->asleep = !on;

   if (this->useSerial)
   {
      if (this->sleepPin == -1)
      {
         return;
      }
      else
      {
          if (this->sleepPinConfigured == false)
          {
        	  //TODO
             configureSleepPin();
             this->sleepPinConfigured = true;
          }
      }
   }

   if (on)
   {
      diagprint(F("Powering on modem...\r\n"));
      if (this->useSerial)
      {
         setSleepPin(HIGH); // HIGH = awake
      }
      else
      {
         enable9603(true);
      }
      lastPowerOnTime = millis();
   }
   else
   {
      // Best Practices Guide suggests waiting at least 2 seconds
      // before powering off again
      unsigned long elapsed = millis() - lastPowerOnTime;
      if (elapsed < 2000UL)
         HAL_Delay(2000UL - elapsed);

      diagprint(F("Powering off modem...\r\n"));
      if (this->useSerial)
      {
         setSleepPin(LOW); // LOW = asleep
      }
      else
      {
         enable9603(false);
      }
   }
}
